--- a/index.html
+++ b/index.html
@@ -55,16 +55,15 @@ div#carousel ~ span {
   </style>
 </head>
 <body>
-  <base href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/wanaka-tree.jpg">
+  <!--<base href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/wanaka-tree.jpg"> -->
   <div id="carousel">
     <figure id="spinner">
-      <img src="C:\Users\BHAVYA SINGH\Desktop\New folder\imgs/img1.png">
-      <img src="C:\Users\BHAVYA SINGH\Desktop\New folder\imgs/img2.png">
-      <img src="C:\Users\BHAVYA SINGH\Desktop\New folder\imgs/img3.png">
-      <img src="C:\Users\BHAVYA SINGH\Desktop\New folder\imgs/img4.png">
-      <img src="C:\Users\BHAVYA SINGH\Desktop\New folder\imgs/img5.png">
-      <img src="C:\Users\BHAVYA SINGH\Desktop\New folder\imgs/img6.png">
-
+      <img src="imgs/img1.png">
+      <img src="imgs/img2.png">
+      <img src="imgs/img3.png">
+      <img src="imgs/img4.png">
+      <img src="imgs/img5.png">
+      <img src="imgs/img6.png">
     </figure>
   </div>
   <span style="float:left" class="ss-icon" onclick="galleryspin('-')">&lt;</span>
