--- a/index.html
+++ b/index.html
@@ -1,35 +1,83 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-  <script>
-  var angle = 0;
+<meta charset="utf-8">
+<title>jQuery Classy Countdown Plugin Demos</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
+
+<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
+<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+<script src="js/modernizr.js"></script> <!-- Modernizr -->
+
+<link href="css/jquery.classycountdown.css" rel="stylesheet" type="text/css">
+<link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+
+
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+<style>
+html {
+  height: 100%;
+	background-image: url('imgs/sample.jpg');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+body {
+  height: 100%;
+	background-color: rgba(44,62,80 , 0.6 );
+	background-image: url('imgs/pattern.png');
+	background-position: center;
+	background-repeat: repeat;
+	font-family: 'Roboto';
+}
+
+</style>
+<script>
+var angle = 0;
 function galleryspin(sign) {
 spinner = document.querySelector("#spinner");
 if (!sign) { angle = angle + 60; } else { angle = angle - 60; }
 spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-transform: rotateY("+ angle +"deg); transform: rotateY("+ angle +"deg);");
 }
-  </script>
-  <style>
-  div#carousel {
-  perspective: 1200px;
-  background: #ffffff;
-  padding-top: 10%;
-  font-size:0;
-  margin-bottom: 0;
-  overflow:hidden;
+</script>
+<style>
+#overlay {
+    position:relative;
+    top:0;
+    left:0;
+    width:100%;
+    height:315;
+    background:#ffffff;
+    opacity:0.8;
+    /*background:rgba(255,255,255,0.8); or just this*/
+    z-index:50;
+    color:#410;
+}
+
+div#carousel {
+perspective: 1200px;
+background: #ffffff;
+padding-top: 10%;
+font-size:0;
+margin-bottom: 0;
+overflow:hidden;
 }
 figure#spinner {
-  transform-style: preserve-3d;
-  height: 420px;
-  transform-origin: 50% 50% -500px;
-  transition: 1s;
+transform-style: preserve-3d;
+height: 420px;
+transform-origin: 50% 50% -500px;
+transition: 1s;
 }
 figure#spinner img {
-  height: 100%;
-  width: 90%; max-width: 480px;
-  position: absolute; left: 30%;
-  transform-origin: 50% 50% -500px;
-  outline:1px solid transparent;
+height: 100%;
+width: 90%; max-width: 40%;
+position: absolute; left: 30%;
+transform-origin: 50% 50% -500px;
+outline:1px solid transparent;
 }
 figure#spinner img:nth-child(1) { transform:rotateY(0deg);
 }
@@ -40,35 +88,197 @@ figure#spinner img:nth-child(5){ transform: rotateY(-240deg); }
 figure#spinner img:nth-child(6){ transform: rotateY(-300deg); }
 
 div#carousel ~ span {
-  color: #000000;
-  margin: 5%;
-  display: inline-block;
-  text-decoration: none;
-  font-size: 2rem;
-  transition: 0.6s color;
-  position: relative;
-  margin-top: -6rem;
-  border-bottom: none;
-  line-height: 0; }
-  div#carousel ~ span:hover { color: #888; cursor: pointer; }
+color: #000000;
+margin: 5%;
+display: inline-block;
+text-decoration: none;
+font-size: 2rem;
+transition: 0.6s color;
+position: relative;
+margin-top: -6rem;
+border-bottom: none;
+line-height: 0; }
+div#carousel ~ span:hover { color: #888; cursor: pointer; }
 
-  </style>
+</style>
 </head>
+
 <body>
-  <!--<base href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/wanaka-tree.jpg"> -->
-  <div id="carousel">
-    <figure id="spinner">
-      <img src="imgs/img1.png">
-      <img src="imgs/img2.png">
-      <img src="imgs/img3.png">
-      <img src="imgs/img4.png">
-      <img src="imgs/img5.png">
-      <img src="imgs/img6.png">
-    </figure>
-  </div>
-  <span style="float:left" class="ss-icon" onclick="galleryspin('-')">&lt;</span>
+
+<section id="home" style="height: 700px">
+      <div id="countdown9" style="padding-top: 25%" class="ClassyCountdownDemo"></div>
+</section>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="js/jquery.knob.js"></script>
+<script src="js/jquery.throttle.js"></script>
+
+<script src="js/jquery.classycountdown.js"></script>
+<script>
+                                          $('#countdown9').ClassyCountdown({
+                                                end: '1388468325',
+                                                now: '1380501323',
+                                                labels: true,
+                                                style: {
+                                                    element: "",
+                                                    textResponsive: .5,
+                                                    days: {
+                                                        gauge: {
+                                                            thickness: .05,
+                                                            bgColor: "rgba(0,0,0,0)",
+                                                            fgColor: "#1abc9c",
+                                                            lineCap: 'round'
+                                                        },
+                                                        textCSS: 'font-family:\'Roboto\'; font-size:25px; font-weight:300; color:#ffffff;'
+                                                    },
+                                                    hours: {
+                                                        gauge: {
+                                                            thickness: .05,
+                                                            bgColor: "rgba(0,0,0,0)",
+                                                            fgColor: "#2980b9",
+                                                            lineCap: 'round'
+                                                        },
+                                                        textCSS: 'font-family:\'Roboto\'; font-size:25px; font-weight:300; color:#ffffff;'
+                                                    },
+                                                    minutes: {
+                                                        gauge: {
+                                                            thickness: .05,
+                                                            bgColor: "rgba(0,0,0,0)",
+                                                            fgColor: "#8e44ad",
+                                                            lineCap: 'round'
+                                                        },
+                                                        textCSS: 'font-family:\'Roboto\'; font-size:25px; font-weight:300; color:#ffffff;'
+                                                    },
+                                                    seconds: {
+                                                        gauge: {
+                                                            thickness: .05,
+                                                            bgColor: "rgba(0,0,0,0)",
+                                                            fgColor: "#f39c12",
+                                                            lineCap: 'round'
+                                                        },
+                                                        textCSS: 'font-family:\'Roboto\'; font-size:25px; font-weight:300; color:#ffffff;'
+                                                    }
+
+                                                },
+                                                onEndCallback: function() {
+                                                    console.log("VGL 2017 has begun!");
+                                                }
+                                            });
+
+                                    </script><script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-36251023-1']);
+  _gaq.push(['_setDomainName', 'jqueryscript.net']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+<section id="cd-timeline" class="cd-container">
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-picture">
+      <img src="imgs/application.svg" alt="Picture">
+    </div> <!-- cd-timeline-img -->
+
+    <div class="cd-timeline-content">
+      <h2>Title of section 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+
+      <span class="cd-date">Jan 14</span>
+    </div> <!-- cd-timeline-content -->
+  </div> <!-- cd-timeline-block -->
+
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-movie">
+      <img src="imgs/application.svg" alt="Picture">
+    </div> <!-- cd-timeline-img -->
+
+    <div class="cd-timeline-content">
+      <h2>Title of section 2</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
+
+      <span class="cd-date">Jan 18</span>
+    </div> <!-- cd-timeline-content -->
+  </div> <!-- cd-timeline-block -->
+
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-picture">
+      <img src="imgs/application.svg" alt="Picture">
+    </div> <!-- cd-timeline-img -->
+
+    <div class="cd-timeline-content">
+      <h2>Title of section 3</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
+
+
+    </div> <!-- cd-timeline-content -->
+  </div> <!-- cd-timeline-block -->
+
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-location">
+      <img src="imgs/application.svg" alt="Picture">
+    </div> <!-- cd-timeline-img -->
+
+    <div class="cd-timeline-content">
+      <h2>Title of section 4</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+
+
+    </div> <!-- cd-timeline-content -->
+  </div> <!-- cd-timeline-block -->
+
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-location">
+      <img src="imgs/application.svg" alt="Picture">
+    </div> <!-- cd-timeline-img -->
+
+    <div class="cd-timeline-content">
+      <h2>Title of section 5</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
+
+      <span class="cd-date">Feb 18</span>
+    </div> <!-- cd-timeline-content -->
+  </div> <!-- cd-timeline-block -->
+
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-movie">
+      <img src="imgs/application.svg" alt="Picture">
+    </div> <!-- cd-timeline-img -->
+
+    <div class="cd-timeline-content">
+      <h2>Final Section</h2>
+      <p>This is the content of the last section</p>
+      <span class="cd-date">Feb 26</span>
+    </div> <!-- cd-timeline-content -->
+  </div> <!-- cd-timeline-block -->
+</section> <!-- cd-timeline -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/main.js"></script> <!-- Resource jQuery -->
+
+<section id="carousel" style="height:700px">
+<div id="carousel">
+  <figure id="spinner">
+    <img src="imgs/img1.png">
+    <img src="imgs/img2.png">
+    <img src="imgs/img3.png">
+    <img src="imgs/img4.png">
+    <img src="imgs/img5.png">
+    <img src="imgs/img6.png">
+  </figure>
+</div>
+<span style="float:left" class="ss-icon" onclick="galleryspin('-')">&lt;</span>
 <span style="float:right" class="ss-icon" onclick="galleryspin('')">&gt;</span>
+</section>
 
-
+<section id="video" style="height:500px">
+<div id="overlay">
+<iframe class="youtube-player" type="text/html" width="100%" height="315" src="https://www.youtube.com/embed/IhRx6ZtxlOU" frameborder="0" allowfullscreen></iframe>
+</div>
+</section>
 </body>
 </html>
