--- a/index.html
+++ b/index.html
@@ -237,9 +237,6 @@ div#carousel ~ span:hover { color: #888; cursor: pointer; }
 </script>
 
 <section style="width: 100%; background-color: #212121" id="cd-timeline" class="cd-container">
-  <div style="style="text-align: center"">
-    <h1 style="color: white">TAG's history</h1>
-  </div>
   <div class="cd-timeline-block">
     <div class="cd-timeline-img cd-picture">
       <img src="imgs/application.svg" alt="Picture">
@@ -301,7 +298,7 @@ div#carousel ~ span:hover { color: #888; cursor: pointer; }
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
 
-<section id="carousel" style="height:700px">
+<section id="carousel" style="height:600px">
 <div id="carousel">
   <figure id="spinner">
     <img src="imgs/img1.png">
@@ -366,7 +363,7 @@ div#carousel ~ span:hover { color: #888; cursor: pointer; }
           <p>
           </br>
           </p>
-            <form action="" id="contact-form" method="POST">
+            <form action="https://formspree.io/tagclub.vitu@gmail.com" id="contact-form" method="POST">
               <div class="input-group name-email">
                 <div class="input-field">
                   <input type="text" name="name" id="name" placeholder="Name" class="form-control">
