--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@ div#carousel ~ span:hover { color: #888; cursor: pointer; }
     </div>
   </nav>
 
-<section id="home" style="height: 700px; text-align: center">
-      <div style="padding-top: 10%">
-        <h1 style="color: white; font-size: 60px; font-family: Roboto"><b>VGL starts in...</b></h1>
+<section id="home" style="height: 100%; text-align: center">
+      <div style="padding-bottom: 5%">
+        <h21 style="color: white; font-size: 50px; font-family: Roboto"><b>VGL starts in...</b></h1>
       </div>
-      <div id="countdown9" style="padding-top: 5%; padding-left: 10%; padding-right:10%" class="ClassyCountdownDemo"></div>
+      <div id="countdown9" style="padding-left: 10%; padding-right:10%; padding-bottom: 20px" class="ClassyCountdownDemo"></div>
 </section>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="js/jquery.knob.js"></script>
@@ -313,9 +313,9 @@ div#carousel ~ span:hover { color: #888; cursor: pointer; }
 <span style="float:right" class="ss-icon" onclick="galleryspin('')">&gt;</span>
 </section>
 
-<section id="video" style="height:500px">
+<section id="video" style="height:700px">
 <div id="overlay">
-<iframe class="youtube-player" type="text/html" width="100%" height="315" src="https://www.youtube.com/embed/IhRx6ZtxlOU" frameborder="0" allowfullscreen></iframe>
+<iframe style="margin: auto" class="youtube-player" type="text/html" width="80%" height="500" src="https://www.youtube.com/embed/IhRx6ZtxlOU" frameborder="0" allowfullscreen></iframe>
 </div>
 </section>
 
