--- a/index.html
+++ b/index.html
@@ -313,9 +313,9 @@ div#carousel ~ span:hover { color: #888; cursor: pointer; }
 <span style="float:right" class="ss-icon" onclick="galleryspin('')">&gt;</span>
 </section>
 
-<section id="video" style="height:700px">
+<section id="video" style="height:700px;">
 <div id="overlay">
-<iframe style="margin: auto" class="youtube-player" type="text/html" width="80%" height="500" src="https://www.youtube.com/embed/IhRx6ZtxlOU" frameborder="0" allowfullscreen></iframe>
+<iframe style="margin-left:10%; margin-right:10% " class="youtube-player" type="text/html" width="80%" height="500" src="https://www.youtube.com/embed/IhRx6ZtxlOU" frameborder="0" allowfullscreen></iframe>
 </div>
 </section>
 
