--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>jQuery Classy Countdown Plugin Demos</title>
-  <meta charset="UTF-8">
+  <title>VIT Gamer's League</title>
+  <meta name="description" content="Game-A-Thon By TAG Club">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
@@ -34,6 +34,15 @@
     <script src="js/modernizr-2.6.2.min.js"></script>
     <script src="js/smooth.js"></script>
     <script src="js/smoothscroll.js"></script>
+    <script type="text/javascript" src="js/scroll.js"></script>
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+    <!-- Script for Smooth scrolling-->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
 <style>
 html {
   height: 100%;
@@ -69,7 +78,7 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
     left:0;
     width:100%;
     height:315;
-    background:#ffffff;
+    background:#212121;
     opacity:0.8;
     /*background:rgba(255,255,255,0.8); or just this*/
     z-index:50;
@@ -78,7 +87,7 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
 
 div#carousel {
 perspective: 1200px;
-background: #ffffff;
+background: #212121;
 padding-top: 10%;
 font-size:0;
 margin-bottom: 0;
@@ -101,7 +110,7 @@ outline:1px solid transparent;
 @media only screen and (max-width: 767px) {
   div#carousel {
   perspective: 1200px;
-  background: #ffffff;
+  background: #212121;
   padding-top: 50%;
   font-size:0;
   margin-bottom: 0;
@@ -124,26 +133,91 @@ figure#spinner img:nth-child(5){ transform: rotateY(-240deg); }
 figure#spinner img:nth-child(6){ transform: rotateY(-300deg); }
 
 div#carousel ~ span {
-color: #000000;
+color: #fff;
 margin: 5%;
 display: inline-block;
 text-decoration: none;
-font-size: 2rem;
+font-size: 5rem;
 transition: 0.6s color;
 position: relative;
 margin-top: -6rem;
 border-bottom: none;
-line-height: 0; }
-div#carousel ~ span:hover { color: #888; cursor: pointer; }
+line-height: 0;
+border: 5px;
+border-radius: 50%;
+border-color: #fff;
+ }
+div#carousel ~ span:hover { color: #fff; cursor: pointer; }
 
-#cd-timeline{
-  margin-top: 50px;
-}
 
 </style>
+
 </head>
 
 <body>
+
+
+  <!-- Return to Top -->
+  <a href="javascript:" id="return-to-top"><i class="zmdi zmdi-triangle-up zmdi-hc-5x"></i></a>
+
+  <style>
+  #return-to-top {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #fff;
+      background: #fff;
+      width: 50px;
+      height: 50px;
+      display: block;
+      text-decoration: none;
+      -webkit-border-radius: 35px;
+      -moz-border-radius: 35px;
+      border-radius: 35px;
+      display: none;
+      -webkit-transition: all 0.3s linear;
+      -moz-transition: all 0.3s ease;
+      -ms-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      transition: all 0.3s ease;
+  }
+  #return-to-top i {
+      color: #000;
+      margin: 0;
+      position: relative;
+      left: 16px;
+      top: 13px;
+      font-size: 19px;
+      -webkit-transition: all 0.3s ease;
+      -moz-transition: all 0.3s ease;
+      -ms-transition: all 0.3s ease;
+      -o-transition: all 0.3s ease;
+      transition: all 0.3s ease;
+  }
+  #return-to-top:hover {
+      background: #fff;
+  }
+  #return-to-top:hover i {
+      color: #fff;
+      top: 5px;
+  }
+  </style>
+
+  <script>
+  // ===== Scroll to Top ====
+  $(window).scroll(function() {
+      if ($(this).scrollTop() >= 50) {        // If page is scrolled more than 50px
+          $('#return-to-top').fadeIn(200);    // Fade in the arrow
+      } else {
+          $('#return-to-top').fadeOut(200);   // Else fade out the arrow
+      }
+  });
+  $('#return-to-top').click(function() {      // When arrow is clicked
+      $('body,html').animate({
+          scrollTop : 0                       // Scroll to top of body
+      }, 500);
+  });
+  </script>
 
   <nav>
     <div style="background-color: #212121" class="nav-wrapper">
@@ -313,7 +387,7 @@ div#carousel ~ span:hover { color: #888; cursor: pointer; }
 <span style="float:right" class="ss-icon" onclick="galleryspin('')">&gt;</span>
 </section>
 
-<section id="video" style="height:700px;">
+<section id="video" style="height:700px;background-color: #212121; padding-top: 10%">
 <div id="overlay">
 <iframe style="margin-left:10%; margin-right:10% " class="youtube-player" type="text/html" width="80%" height="500" src="https://www.youtube.com/embed/IhRx6ZtxlOU" frameborder="0" allowfullscreen></iframe>
 </div>
@@ -411,57 +485,6 @@ div#carousel ~ span:hover { color: #888; cursor: pointer; }
             </div>
   </footer>
 
-  <!--Import jQuery before materialize.js-->
-          <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-          <!-- Compiled and minified JavaScript -->
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
-          <!--Materializecss Slider-->
-          <script>
-              $(document).ready(function () {
-                  $('.slider').slider({full_width: true});
-              });
-          </script>
-
-
-          <script type="text/javascript">
-          $('#HomePointer').on('click', function() {
-            $.smoothScroll({
-              scrollElement: $('body'),
-              scrollTarget: '#home'
-            });
-            return false;
-          });
-          </script>
-
-          <script type="text/javascript">
-          $('#HistoryPointer').on('click', function() {
-            $.smoothScroll({
-              scrollElement: $('body'),
-              scrollTarget: '#cd-timeline'
-            });
-            return false;
-          });
-          </script>
-
-    <script type="text/javascript">
-    $('#GamePointer').on('click', function() {
-    	$.smoothScroll({
-    		scrollElement: $('body'),
-    		scrollTarget: '#carousel'
-    	});
-    	return false;
-    });
-    </script>
-
-    <script type="text/javascript">
-    $('#ContactPointer').on('click', function() {
-    	$.smoothScroll({
-    		scrollElement: $('body'),
-    		scrollTarget: '#facts'
-    	});
-    	return false;
-    });
-    </script>
 
 
 
