--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>VIT Gamer's League</title>
-  <meta name="description" content="Game-A-Thon By TAG Club">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-  <link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-  <script src="js/modernizr.js"></script> <!-- Modernizr -->
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-  <!-- Google Fonts  -->
-  <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'> <!-- Body font -->
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'> <!-- Navbar font -->
-  <link href="css/jquery.classycountdown.css" rel="stylesheet" type="text/css">
-  <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-  <script src="js/prefixfree.media.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/ihover.css" />
-  <link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-  <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" type="text/css" href="css/component.css" />
+    <meta charset="utf-8">
+    <title>VIT Gamer's League</title>
+    <meta name="description" content="Game-A-Thon By TAG Club">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
+    <link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+    <script src="js/modernizr.js"></script> <!-- Modernizr -->
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+    <!-- Google Fonts  -->
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'> <!-- Body font -->
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'> <!-- Navbar font -->
+    <link href="css/jquery.classycountdown.css" rel="stylesheet" type="text/css">
+    <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <script src="js/prefixfree.media.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/ihover.css" />
+    <link rel="stylesheet" href="css/footer-distributed-with-address-and-phones.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="css/component.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/jquery.fancybox.css">
@@ -38,19 +38,16 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <!-- Script for Smooth scrolling-->
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
     <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <style>
 html {
@@ -69,9 +66,8 @@ body{
 	background-repeat: repeat;
 	font-family: 'Roboto';
 }
-
-
 </style>
+
 <script>
 var angle = 0;
 function galleryspin(sign) {
@@ -80,6 +76,7 @@ if (!sign) { angle = angle + 60; } else { angle = angle - 60; }
 spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-transform: rotateY("+ angle +"deg); transform: rotateY("+ angle +"deg);");
 }
 </script>
+
 <style>
 #overlay {
     position:relative;
@@ -93,7 +90,6 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
     z-index:50;
     color:#410;
 }
-
 div#carousel {
 perspective: 1200px;
 background: #212121;
@@ -115,7 +111,6 @@ position: absolute; left: 30%;
 transform-origin: 50% 50% -500px;
 outline:1px solid transparent;
 }
-
 @media only screen and (max-width: 767px) {
   div#carousel {
   perspective: 1200px;
@@ -124,7 +119,7 @@ outline:1px solid transparent;
   font-size:0;
   margin-bottom: 0;
   overflow:hidden;
-  }
+}
 figure#spinner img {
 height: 55%;
 width: 55%;
@@ -146,7 +141,7 @@ color: #fff;
 margin: 5%;
 display: inline-block;
 text-decoration: none;
-font-size: 5rem;
+font-size: 2rem;
 transition: 0.6s color;
 position: relative;
 margin-top: -6rem;
@@ -157,8 +152,6 @@ border-radius: 50%;
 border-color: #fff;
  }
 div#carousel ~ span:hover { color: #fff; cursor: pointer; }
-
-
 </style>
 
 </head>
@@ -370,19 +363,19 @@ div#carousel ~ span:hover { color: #fff; cursor: pointer; }
 
 </script>
 
-<section style="width: 100%; background-color: #212121" id="cd-timeline" class="cd-container">
+<section style="color: white; width: 100%" id="cd-timeline" class="cd-container">
   <div class="cd-timeline-block">
     <div class="cd-timeline-img cd-picture">
       <img src="imgs/application.svg" alt="Picture">
     </div> <!-- cd-timeline-img -->
 
 
-    <div class="cd-timeline-content">
+    <div class="cd-timeline-content" style="background-color: #212121">
       <h1>Game-A-Thon 2K13</h1>
       <p style="font-size: 16px">We began our journey with a prize pool of 80k in graVITas and 50k in riviera. We had total 400 participants
          in graVITas and 250 in Riviera.</p>
 
-      <span class="cd-date"><h3>2013</h3></span>
+      <span style="color: #212121" class="cd-date"><h3>2013</h3></span>
     </div> <!-- cd-timeline-content -->
   </div> <!-- cd-timeline-block -->
 
@@ -391,12 +384,12 @@ div#carousel ~ span:hover { color: #fff; cursor: pointer; }
       <img src="imgs/application.svg" alt="Picture">
     </div> <!-- cd-timeline-img -->
 
-    <div class="cd-timeline-content">
+    <div class="cd-timeline-content" style="background-color: #212121">
       <h1>Game-A-Thon 2K14</h1>
       <p style="font-size: 16px">Our second session of events saw 760 participants in graVITas and 420 in Riviera with a prize pool of 1.8
         lakhs and 1.2 lakhs respectively.</p>
 
-      <span class="cd-date"><h3>2014</h3></span>
+      <span style="color: #212121" class="cd-date"><h3>2014</h3></span>
     </div> <!-- cd-timeline-content -->
   </div> <!-- cd-timeline-block -->
 
@@ -405,12 +398,12 @@ div#carousel ~ span:hover { color: #fff; cursor: pointer; }
       <img src="imgs/application.svg" alt="Picture">
     </div> <!-- cd-timeline-img -->
 
-    <div class="cd-timeline-content">
+    <div class="cd-timeline-content" style="background-color: #212121">
       <h1>Game-A-Thon 2K15</h1>
       <p style="font-size: 16px">We had 800 participants Riviera 2015 with a prize pool of 2 Lakhs. We raised the bars in graVITas 2015
       by giving giveaways so no one went home unhappy with a prize pool of 2 lakhs.</p>
 
-        <span class="cd-date"><h3>2015</h3></span>
+        <span style="color: #212121" class="cd-date"><h3>2015</h3></span>
     </div> <!-- cd-timeline-content -->
   </div> <!-- cd-timeline-block -->
 
@@ -419,12 +412,12 @@ div#carousel ~ span:hover { color: #fff; cursor: pointer; }
       <img src="imgs/application.svg" alt="Picture">
     </div> <!-- cd-timeline-img -->
 
-    <div class="cd-timeline-content">
+    <div class="cd-timeline-content" style="background-color: #212121">
       <h1>Game-A-Thon 2K16</h1>
       <p style="font-size: 16px">This Riviera we organised VGL (VIT Gamer's League). It was only for the students of VIT and we had exclusive
       things. Over 500 participants and a prize pool of 1.2 Lakhs. Over a 1000 participants played in graVITas '16 with a prize pool of 2 lakhs.</p>
 
-        <span class="cd-date"><h3>2016</h3></span>
+        <span style="color: #212121" class="cd-date"><h3>2016</h3></span>
     </div> <!-- cd-timeline-content -->
   </div> <!-- cd-timeline-block -->
 
