--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ div#carousel ~ span:hover { color: #fff; cursor: pointer; }
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/main.js"></script> <!-- Resource jQuery -->
 
-<section id="carousel" style="height:600px">
+<section id="carousel" style="height:600px; background-color: #212121">
 <div id="carousel">
   <figure id="spinner">
     <img src="imgs/img1.png">
